--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="./src/assets/webTitle.png">
+    <!-- <link href="./src/assets/webTitle.png"> -->
+    <link rel="icon" href="./src/assets/webTitle.png" type="image/x-ico">
     <title>学生管理系统</title>
   </head>
   <body>
